# bin_packing_hw

./: .gitignore  CMakeLists.txt  README.MD
source/: main.c  main.h  util.c  util.h
source/lib/: lib.c
tests/: CMakeLists.txt  test.c  test1.txt  test_standard.py  test_swap.c
